added champion section with drop rate table, and fixed typo in items config

--- a/client/src/components/items/config.json
+++ b/client/src/components/items/config.json
@@ -88,7 +88,7 @@
             },
             {
                 "icon": "Guinsoo's_Rageblade_item.png", 
-                "desc": "attacks fgrant 3% AS (stacks infinitely)"
+                "desc": "attacks grant 3% AS (stacks infinitely)"
             },
             {
                 "icon": "Luden's_Echo_item.png", 
